feat: create feature of find all militar
