# src/routes/military.routes.ts
@@ -1,10 +1,12 @@
-import type { Request, Response, Router } from 'express';
+import type { Router } from 'express';
 import { BaseRoute } from './base.routes';
 import { MilitarRepository } from '../repositories/militar-repository';
 import { RemoverMilitarService } from '../services/militar/remover-militar-service';
 import { RemoverMilitarController } from '../controllers/militar/remover-militar-controller';
 import { validateParams } from '../middlewares/validation';
 import { removerMilitarySchema } from '../validators/militar/militar-schema';
+import { BuscarTodosMilitaresService } from '../services/militar/buscar-todos-militares-service';
+import { BuscarTodosMilitaresController } from '../controllers/militar/buscar-todos-militares-controller';
 
 export default class MilitarRoutes extends BaseRoute {
 	public routes(routes: Router): void {
@@ -13,7 +15,7 @@ export default class MilitarRoutes extends BaseRoute {
 			validateParams(removerMilitarySchema),
 			(request, response) => {
 				/*
-            #swagger.tags = ['Militar']
+            #swagger.tags = ['Militares']
             #swagger.summary = 'Returns a user by id'
             #swagger.description = 'This endpoint will return a user by id...'
         */
@@ -28,7 +30,7 @@ export default class MilitarRoutes extends BaseRoute {
 					militarRepository,
 				);
 
-				/*  #swagger.responses[203] = {
+				/*  #swagger.responses[204] = {
                 description: "Some description...",
                 content: {
                     "application/json": {
@@ -87,5 +89,55 @@ export default class MilitarRoutes extends BaseRoute {
 				);
 			},
 		);
+
+		routes.get('/militares', (request, response) => {
+			/*
+            #swagger.tags = ['Militares']
+        */
+
+			const militarRepository = new MilitarRepository();
+			const buscarTodosMilitaresService = new BuscarTodosMilitaresService(
+				militarRepository,
+			);
+
+			/*  #swagger.responses[200] = {
+            content: {
+              "application/json": {
+                schema: {
+                    $ref: "#/components/schemas/militaresResponse"
+                }
+              }           
+            }
+          }   
+      */
+
+			/*  #swagger.responses[204] = {
+                description: "Some description...",
+                content: {
+                    "application/json": {
+                        schema:{
+                            $ref: "#/components/schemas/noContentDelete"
+                        }
+                    }           
+                }
+            }   
+        */
+
+			/*  #swagger.responses[500] = {
+                description: "Some description...",
+                content: {
+                    "application/json": {
+                        schema:{
+                          $ref: "#/components/schemas/serverError"
+                        }
+                    }           
+                }
+            }   
+        */
+			new BuscarTodosMilitaresController(buscarTodosMilitaresService).handle(
+				request,
+				response,
+			);
+		});
 	}
 }
